Bug 1777652 - Minor followup fixes for bug 1530253. r=botond

*

Differential Revision: https://phabricator.services.mozilla.com/D150848